--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #3c0080;
+  background-color: #0288d1;
   color: white;
   padding: 0 10%;
 }
@@ -29,7 +29,7 @@
 
 .header a:hover,
 .header a:active {
-  color: #b864da;
+  color: #e65100;
 }
 
 .header button {
@@ -39,10 +39,12 @@
   padding: 0.5rem 1.5rem;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   color: #2c2922;
+  transition: 0.4s;
 }
 
 .header button:hover,
 .header button:active {
-  background-color: #ffa600;
-  border-color: #ffa600;
+  background-color: #f57c00;
+  border-color: #f57c00;
+    transition: 0.4s
 }
